--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,57 @@
 @charset "UTF-8";
 
 /* 
-
+    Cores 
+    #9A8F97
+    #C3BABA
+    #E9E3E6
+    #242423
+    #333533
 
 */
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, HTML{
+    background-color: #333533 ;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: #E9E3E6;
+    width: 250px;
+    height:  500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.548);
+}
+
+section#login > div#imagem{
+    display: block;
+    background: #333533 url(../imagens/pexels-dinnow-9444476.jpg) no-repeat;
+    background-size: cover;
+    background-position: left bottom;
+    height: 200px;
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 20px;
+}
