--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,11 +2,11 @@
 
 /* 
     Cores 
-    #9A8F97
-    #C3BABA
-    #E9E3E6
-    #242423
-    #333533
+    #02121C
+    #151A1B
+    #776E60
+    #ADADB3
+    #78422A
 
 */
 
@@ -18,7 +18,7 @@
 }
 
 body, HTML{
-    background-color: #333533 ;
+    background-color: #02121C ;
     height: 100vh;
     width: 100vw;
 }
@@ -36,16 +36,20 @@ section#login{
     transform: translate(-50%, -50%);
     overflow: hidden;
 
-    background-color: #E9E3E6;
+    background-color: white;
     width: 250px;
     height:  500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.548);
+
+    transition: width.3s, height .3s;
+    transition-timing-function: ease;
+
 }
 
 section#login > div#imagem{
     display: block;
-    background: #333533 url(../imagens/pexels-dinnow-9444476.jpg) no-repeat;
+    background: #02121C url(../imagens/pexels-dinnow-9444476.jpg) no-repeat;
     background-size: cover;
     background-position: left bottom;
     height: 200px;
