--- a/estilos/midia-query.css
+++ b/estilos/midia-query.css
@@ -3,7 +3,7 @@
 @media screen and (min-width: 768px) and (max-width:992px){
     
     body{
-        background-image: linear-gradient(to top left, #151A1B, #776E60, #ADADB3, #02121C );
+        background-image: linear-gradient(to top , #151A1B, #776E60, #ADADB3, #02121C );
     }
 
     section#login{
@@ -26,7 +26,7 @@
 @media screen and (min-width: 992px){
     
     body{
-        background-image: linear-gradient(to top left , #151A1B, #776E60, #ADADB3, #02121C );
+        background-image: linear-gradient(to top  , #151A1B, #776E60, #ADADB3, #02121C );
     }
 
     section#login{
