--- a/estilos/midia-query.css
+++ b/estilos/midia-query.css
@@ -8,6 +8,7 @@
 
     section#login{
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#imagem{
@@ -20,6 +21,9 @@
         float: right;
         width: 70%;
     }
+    div#formulario > p{
+        padding: 5px 0px;
+    }
 
 }
 
@@ -31,6 +35,7 @@
 
     section#login{
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem{
@@ -49,6 +54,7 @@
     }
     
     div#formulario > p{
-        font-size: 0.8em;
+        font-size: 1em;
+        padding: 20px 0px;
     }
 }
